adding apache configuration

--- a/templates/cgi.cfg.erb
+++ b/templates/cgi.cfg.erb
@@ -169,8 +169,8 @@ authorized_for_system_commands=nagiosadmin
 # to authorize any user who has authenticated to the web server.
 
 
-authorized_for_all_services=nagiosadmin
-authorized_for_all_hosts=nagiosadmin
+authorized_for_all_services=<%= @authorized_for_all_services %>
+authorized_for_all_hosts=<%= @authorized_for_all_hosts %>
 
 
 
