allowing to send commands from the web interface

--- a/templates/nagios.cfg.erb
+++ b/templates/nagios.cfg.erb
@@ -160,7 +160,7 @@ command_check_interval=-1
 # directory level instead of on the file, as the file is deleted every
 # time its contents are processed.
 
-command_file=<%= @nagios_varlib_dir %>/rw/nagios.cmd
+command_file=<%= @nagios_external_cmd_dir %>/nagios.cmd
 
 
 
