--- a/templates/cgi.cfg.erb
+++ b/templates/cgi.cfg.erb
@@ -183,8 +183,8 @@ authorized_for_all_hosts=<%= @authorized_for_all_hosts %>
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=nagiosadmin
-authorized_for_all_host_commands=nagiosadmin
+authorized_for_all_service_commands=<%= @authorized_for_all_services %>
+authorized_for_all_host_commands=<%= @authorized_for_all_hosts %>
 
 
 
