--- a/templates/nagios.cfg.erb
+++ b/templates/nagios.cfg.erb
@@ -821,7 +821,7 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=0
+process_performance_data=<%= @process_performance_data %>
 
 
 
@@ -835,6 +835,12 @@ process_performance_data=0
 
 #host_perfdata_command=process-host-perfdata
 #service_perfdata_command=process-service-perfdata
+<% if @host_perfdata_command %>
+host_perfdata_command=<%= @host_perfdata_command %>
+<% end -%>
+<% if @service_perfdata_command %>
+service_perfdata_command=<%= @service_perfdata_command %>
+<% end -%>
 
 
 
