--- a/templates/cgi.cfg.erb
+++ b/templates/cgi.cfg.erb
@@ -131,7 +131,7 @@ use_ssl_authentication=0
 # not use authorization.  You may use an asterisk (*) to
 # authorize any user who has authenticated to the web server.
 
-authorized_for_system_information=nagiosadmin
+authorized_for_system_information=<%= @authorized_for_system_information %>
 
 
 
@@ -143,7 +143,7 @@ authorized_for_system_information=nagiosadmin
 # an asterisk (*) to authorize any user who has authenticated
 # to the web server.
 
-authorized_for_configuration_information=nagiosadmin
+authorized_for_configuration_information=<%= @authorized_for_configuration_information %>
 
 
 
@@ -156,7 +156,7 @@ authorized_for_configuration_information=nagiosadmin
 # You may use an asterisk (*) to authorize any user who has
 # authenticated to the web server.
 
-authorized_for_system_commands=nagiosadmin
+authorized_for_system_commands=<%= @authorized_for_system_commands %>
 
 
 
