Add parameter to enable/disable environment_macros

--- a/templates/nagios.cfg.erb
+++ b/templates/nagios.cfg.erb
@@ -1237,7 +1237,7 @@ use_large_installation_tweaks=0
 # Values: 1 - Enable environment variable macros (default)
 #         0 - Disable environment variable macros
 
-enable_environment_macros=0
+enable_environment_macros=<%= @nagios_enable_environment_macros %>
 
 
 
